# websocket-game-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
docs/: game_sequence.puml  matchmaking_sequence.puml
sql/: create_tables.sql  match_results.sql
src/agent/: Cargo.toml
src/agent/src/: client.rs  lib.rs  strategy.rs
src/central-server/: Cargo.toml
src/central-server/src/: lib.rs  main.rs  queue_socket.rs  threadpool.rs
src/central-server/src/model/: messages.rs
src/central-server/src/service/: matchmaking.rs  mod.rs  queue_socket.rs  websocket.rs
src/central-server/src/utility/: channel.rs
src/common/: Cargo.toml
src/common/src/: lib.rs  test.rs  utility.rs  websocket.rs
src/common/src/message/: game_server.rs
src/common/src/model/: game.rs  messages.rs  mod.rs
src/game-client/: eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
src/game-client/src/app/: client.tsx  clientlist.tsx  game.tsx  layout.tsx  page.tsx  queue.tsx
src/game-client/src/app/hooks/: socket.tsx
src/game-client/src/app/queue/: page.tsx
src/game-client/src/app/shared/: requests.ts  responses.ts
src/game-server/: Cargo.toml
src/game-server/src/: entrypoint.rs  main.rs
src/game-server/src/model/: external.rs  internal.rs
src/game-server/src/service/: game_manager.rs  game_socket.rs  game_thread.rs  mod.rs
src/game-server/test/data/: full_game.json
src/game-server/tests/data/: full_game.json
src/matchmaking-server/: Cargo.toml
src/matchmaking-server/src/: entrypoint.rs  lib.rs  main.rs
src/matchmaking-server/src/model/: messages.rs
src/matchmaking-server/src/service/: matchmaking.rs  queue_socket.rs
src/matchmaking-server/test/data/: queue_multiple_times.json
src/web-client/: eslint.config.mjs  package.json  pnpm-lock.yaml
src/web-client/src/app/: client.tsx  game.tsx  layout.tsx  queue.tsx
src/web-client/src/app/game/: game.tsx  model.ts  requests.ts
src/web-client/src/app/hooks/: socket.tsx
src/web-client/src/app/queue/: queue.tsx  requests.ts
src/web-client/src/app/shared/: requests.ts  responses.ts
