[package]
name = "agent"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
common = { path = "../common/" }
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
tokio-tungstenite = "0.24.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = {version = "0.12.12", features = ["json"]}
