[package]
name = "central-server"
version = "0.0.1"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
common = { path = "../common/" }
axum = "0.7.8"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
