[package]
name = "common"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.83"
futures-util = "0.3.31"
regex = "1.11.1"
reqwest = {version = "0.12.12", features = ["json"]}
serde = "1.0.215"
serde_json = "1.0.133"
tokio = "1.42.0"
tokio-tungstenite = "0.24.0"
tracing = "0.1.41"
uuid = "1.11.0"
