[package]
name = "game-server"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "game-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
common = { path = "../common/" }
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
tokio-tungstenite = "0.24.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.31"
prost = "0.13.3"
uuid = { version = "1.11.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
serde_json = "1.0.133"
axum-macros = "0.4.2"
tower-http = { version = "0.6.2", features = ["trace"] }
async-trait = "0.1.84"
itertools = "0.14.0"
